argocd/apps/mqtt/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mosquitto
  labels:
    app: mosquitto
    pod-security.kubernetes.io/enforce: privileged
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/component: mqtt
    gateway.networking.k8s.io/allowed: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
