argocd/apps/mqtt/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
    tier: frontend
  ports:
    - port: 1883
      name: mqtt
      targetPort: 1883
      protocol: TCP
    - port: 8883
      name: mqtts
      targetPort: 8883
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-ws
  namespace: mosquitto
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
    tier: frontend
  ports:
    - port: 9001
      name: websocket
      targetPort: 9001
      protocol: TCP
