argocd/apps/mqtt/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: mosquitto
  labels:
    app: mosquitto
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "mosquitto-ws"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$connection_upgrade"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mqtt.civilsnut.se
      secretName: civilsnut-se-wildcard-tls
  rules:
    - host: mqtt.civilsnut.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto-ws
                port:
                  number: 9001
