argocd/apps/mqtt/manifests/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mosquitto-tcp
  namespace: mosquitto
  labels:
    app: mqtt
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
      sectionName: mqtt-tcp # References the specific listener
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
